kubernetes-manifests/rce-http-exploit/deployment-rce-http-exploit.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rce-http-exploit
  labels:
    demo: roadshow
    repo: demo-apps
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rce-http-exploit
  namespace: rce-http-exploit
  labels:
    app: rce-http-exploit
    demo: roadshow
    repo: demo-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rce-http-exploit
  template:
    metadata:
      labels:
        app: rce-http-exploit
        demo: roadshow
        repo: demo-apps
    spec:
      containers:
        - name: rce-http-exploit
          image: quay.io/mfoster/rce-http-exploit:0.1.0
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "256Mi"
              cpu: "250m"
            requests:
              memory: "128Mi"
              cpu: "100m"
