kubernetes-manifests/rce-http-exploit/service-rce-http-exploit.yaml
apiVersion: v1
kind: Service
metadata:
  name: rce-http-exploit
  namespace: rce-http-exploit
  labels:
    demo: roadshow
    repo: demo-apps
spec:
  selector:
    app: rce-http-exploit
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
