kubernetes-manifests/rce-http-exploit/route-rce-http-exploit.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: rce-http-exploit
  namespace: rce-http-exploit
  labels:
    demo: roadshow
    repo: demo-apps
spec:
  to:
    kind: Service
    name: rce-http-exploit
  port:
    targetPort: 80
  tls:
    termination: edge
  wildcardPolicy: None
